--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>AWillAndAWay</title>
-  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyCvcXthYJhbAmJZUvD6Fnn5HQO-e6aqvVU" %>
+  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyD0YvePwLmxe5tZ2EVosXebF0g_VqfCNRE" %>
   <%= javascript_include_tag "https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyDMqQdIKIT5JVoHKQnVMrAKfZI9E1fz5oU" %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
@@ -31,7 +31,7 @@
 <body>
 
 
-
+AIzaSyBQOyCYQaAePoaDV7zDFiTWnqHvtkQlm8g
 <%= yield %>
 
 </body>
