--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>AWillAndAWay</title>
-  <script src= "https://maps.googleapis.com/maps/api/js?key=<%=ENV['MAPS_API']%>"></script>
+  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyD0YvePwLmxe5tZ2EVosXebF0g_VqfCNRE" %>
+  <%= javascript_include_tag "https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyDMqQdIKIT5JVoHKQnVMrAKfZI9E1fz5oU" %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
